correct build infrastructure